Initial changes for preview release on Spark 4.0 preview
- Upgrades our version to 4.0.0-SNAPSHOT, and updates Mima settings

- Upgrades Scala to be only Scala 2.13, and makes necessary changes to Kernel code

- Changes the default sparkVersion to be "4.0.0-preview1" and adds the Spark RC repo as a resolver
   - Makes Kernel work with Java 17

- Comments out uniform projects as they require other dependencies

- Comments out flink as it does not support Scala 2.13

- Changes other remaining projects to "skipReleaseSettings" as we decided for now to only release Spark, Kernel, and any storage related projects (due to dependency complexities with Spark and Scala versions)

- Updates our CI jobs for Scala and Java versions

- Updates Spark examples to use the Spark RC